# sysSentry

./: .gitignore  Makefile  README.en.md  README.md  RELEASE-NOTES.md  changlog
Docs/: CATCLI使用手册.md
config/: collector.conf  inspect.conf  logrotate  logrotate-sysSentry.conf  xalarm.conf
config/env/: soc_ring_sentry.env
config/plugins/: ai_block_io.ini  ai_threshold_slow_io_detection.ini  avg_block_io.ini  cpu_sentry.ini
config/service/: sysSentry.service  xalarmd.service
config/task_scripts/: sentry_msg_monitor.sh
config/tasks/: ai_block_io.mod  ai_threshold_slow_io_detection.mod  avg_block_io.mod  bmc_block_io.mod  hbm_online_repair.mod  sentry_msg_monitor.mod
doc/: UserGuide
docs/en/2403_LTS_SP3/: _toc.yaml  ai_block_io_plugin.md  avg_block_io_plugin.md  developer_guide.md  installation_and_usage.md  plugins.md  question_and_answer.md  sentry_msg_monitor.md  syssentry_introduction.md
docs/en/master/: _toc.yaml  avg_block_io_plugin.md  cpu_fault_inspection_plugin.md  developer_guide.md  installation_and_usage.md  plugins.md  question_and_answer.md
docs/zh/: _toc.yaml
docs/zh/2403_LTS_SP3/: _toc.yaml  ai_block_io_plugin.md  bmc_ras_sentry_plugin.md  developer_guide.md  plugins.md  sentry_msg_monitor.md
docs/zh/master/: _toc.yaml  bmc_ras_sentry_plugin.md  developer_guide.md  installation_and_usage.md  plugins.md  sentry_msg_monitor.md
libs/libxalarm/: register_xalarm.c
selftest/: test.sh  testsuite_skip_list
selftest/libs/: common.sh  expect.sh  log.sh  shopt.sh  wait.sh
selftest/test/: test_ai_block_io.py  test_ai_threshold_slow_io_detection.py  test_bmc_ras_sentry_invalid_param.sh  test_bmc_ras_sentry_valid_param_update_cycle.sh  test_cpu_sentry.py  test_load_mods.py  test_load_mods_alarm_clear_time_invalid.sh  test_load_mods_alarm_id_invalid.sh  test_load_mods_conflict_invalid.sh  test_load_mods_env_file_invalid.sh  test_load_mods_valid_config.sh  test_sentryctl_end_exception.sh  test_sentryctl_exception.sh  test_sentryctl_heartbeat_exception.sh  test_sentryctl_interval_exception.sh  test_sentryctl_modname_long_length_exception.sh  test_sentryctl_modname_valid.sh  test_sentryctl_normal.sh  test_sentryctl_reload.sh  test_sentryctl_start_exception.sh  test_sentryctl_type_exception.sh  test_sentryctl_type_oneshot.sh  test_sentryctl_type_period.sh  test_xalarm_read_config_exception.sh  test_xalarm_register_and_unregister_exception.sh  test_xalarm_restart_exception.sh  test_xalarm_send_message.sh  test_xalarm_upgrade_exception.sh
selftest/test/nvme/: ReadMe.md  nvme_inject_install.sh  nvme_inject_uninstall.sh
selftest/test/sysSentry/: test_task.c
selftest/test/xalarm/: reg_demo.c  unreg_demo.c  upgrade_demo.c
selftest/xalarm/: send_demo.c
service/: sentryCollector.service  sysSentry.service  xalarmd.service
src/: setup.py
src/c/ebpf_collector/: Makefile  bpf_helpers.h  bpf_load.c  ebpf_collector.bpf.c  ebpf_collector.c  ebpf_collector.h  vmlinux.h  vmlinux_aarch64.h  vmlinux_x86_64.h
src/c/hbm_online_repair/: hbm_online_repair.c  hbm_online_repair.env  logger.h  non-standard-hbm-repair.c  non-standard-hbm-repair.h  ras-events.c  ras-non-standard-handler.c
src/c/soc_ring_sentry/: Makefile  soc_ring_sentry.c
src/libs/: CMakeLists.txt
src/libs/libxalarm/: CMakeLists.txt  register_xalarm.c  register_xalarm.h
src/libs/pyxalarm/: register_xalarm.py
src/libsentry/c/io/: CMakeLists.txt  io_utils.c  io_utils.h
src/libsentry/pySentryNotify/: sentry_notify.py
src/libso/xalarm/: register_xalarm.c  register_xalarm.h
src/plugins/ai_block_io/: detector.py
src/plugins/avg_block_io/: avg_block_io.py  module_conn.py
src/plugins/cpu_sentry/: cpu_alarm.py
src/plugins/hbm_online_repair/: Makefile  logger.h  ras-events.h
src/python/: sentry  setup.py
src/python/sentryCollector/: collect_config.py  collect_io.py  collect_plugin.py  collect_server.py  collectd.py
src/python/syssentry/: alarm.py  callbacks.py  cpu_alarm.py  cpu_sentry.py  cron_process.py  global_values.py  load_mods.py  mod_status.py  result.py  sentry_config.py  sentryctl  syssentry.py  task_map.py
src/python/xalarm/: register_xalarm.py  sentry_notify.py  xalarm_api.py  xalarm_server.py  xalarm_transfer.py
src/sentryCollector/: collect_io.py
src/sentryCollector/ebpf_collector/: bpf_load.c  ebpf_collector.c  ebpf_collector.h
src/sentryPlugins/ai_block_io/: ai_block_io.py  alarm_report.py  config_parser.py  detector.py  sliding_window.py
src/sentryPlugins/avg_block_io/: stage_window.py  utils.py
src/sentryPlugins/bmc_block_io/: CMakeLists.txt
src/sentryPlugins/bmc_block_io/include/: cbmcblockio.h  common.h  configure.h  logger.h
src/sentryPlugins/bmc_block_io/src/: cbmcblockio.cpp  common.cpp  logger.cpp  main.cpp
src/sentryPlugins/bmc_ras_sentry/: CMakeLists.txt
src/sentryPlugins/cpu_sentry/: README.md  cpu_sentry.py
src/sentryPlugins/cpu_sentry/catlib/plugin/cpu_patrol/: CMakeLists.txt  cpu_patrol.c  cpu_patrol.h  cpu_patrol_result.c  cpu_patrol_result.h
src/sentryPlugins/hbm_online_repair/: Makefile  hbm-ras-events.c  hbm-ras-events.h  hbm-ras-handler.c  hbm-ras-handler.h  hbm_online_repair.c  logger.h  non-standard-hbm-repair.c  non-standard-hbm-repair.h  ras-events.c  ras-events.h  ras-non-standard-handler.h
src/sentryPlugins/soc_ring_sentry/: Makefile  (+1 more)
src/syssentry/: alarm.py  callbacks.py  cron_process.py  load_mods.py  result.py  sentry_config.py  syssentry.py
src/xalarm/: xalarm_config.py  xalarm_server.py
sysSentry-1.0.2/: RELEASE-NOTES.md
sysSentry-1.0.2/config/: collector.conf  logrotate  xalarm.conf
sysSentry-1.0.2/selftest/: test.sh
sysSentry-1.0.2/selftest/xalarm/: CMakeLists.txt
sysSentry-1.0.2/service/: sentryCollector.service
sysSentry-1.0.2/src/c/catcli/catlib/: CMakeLists.txt  cli_common.h  cli_executor.h  cli_param_checker.c  cli_param_checker.h
sysSentry-1.0.2/src/c/catcli/catlib/plugin/: CMakeLists.txt
sysSentry-1.0.2/src/c/catcli/catlib/plugin/cpu_patrol/: CMakeLists.txt  cpu_patrol_result.c  cpu_patrol_result.h
sysSentry-1.0.2/src/libso/xalarm/: CMakeLists.txt  register_xalarm.c  register_xalarm.h
(+188 files in other folders)
